@@ -296,18 +296,21 @@ function bp_options_page() {
  */
 function rebuild_bp_menus_step_1() {
 
-	remove_submenu_page('options-general.php', 'bpfb-settings'); // Activity Plus
-	remove_submenu_page('options-general.php', 'invite-anyone'); // Invite anyone
-
 	add_menu_page(__('BuddyPress', 'buddypress'), __('BuddyPress', 'buddypress'), 'manage_options', 'xtec-bp-options', 'bp_options_page', '', 59);
 
 	add_submenu_page('xtec-bp-options', __('Components', 'buddypress'), __('Components', 'buddypress'), 'manage_options', 'bp-components', 'bp_core_admin_components_settings');
 	add_submenu_page('xtec-bp-options', __('Activity', 'buddypress'), __('Activity', 'buddypress'), 'manage_options', 'bp-activity');
-	add_submenu_page('xtec-bp-options', __('Activity Plus', 'bpfb'), __('Activity Plus', 'bpfb'), 'manage_options', 'bpfb-settings', 'settings_page');
 	add_submenu_page('xtec-bp-options', __('Groups', 'buddypress'), __('Groups', 'buddypress'), 'manage_options', 'bp-groups');
 	add_submenu_page('xtec-bp-options', __('BuddyPress Like', 'buddypress-like'), __('BuddyPress Like', 'buddypress-like'), 'manage_options' , 'bp-like-settings' , 'bp_like_admin_page');
 	add_submenu_page('xtec-bp-options', __('Group Email Options', 'bp-ass'), __('Group Email Options', 'bp-ass'), 'manage_options', 'ass_admin_options', 'ass_admin_options');
-	add_submenu_page('xtec-bp-options', __('Invite Anyone', 'invite-anyone'), __('Invite Anyone', 'invite-anyone'), 'manage_options', 'invite-anyone', 'invite_anyone_admin_panel');
+
+    // Don't load Invite Anyone menu
+    remove_action('admin_menu', 'invite_anyone_admin_add', 80);
+
+    // Reproduce the actions in the function previously cancelled
+    $plugin_page = add_submenu_page('xtec-bp-options', __('Invite Anyone', 'invite-anyone'), __('Invite Anyone', 'invite-anyone'), 'manage_options', 'invite-anyone', 'invite_anyone_admin_panel');
+    add_action("admin_print_scripts-$plugin_page", 'invite_anyone_admin_scripts');
+    add_action("admin_print_styles-$plugin_page", 'invite_anyone_admin_styles');
 }
 
 /**
@@ -326,6 +329,7 @@ function rebuild_bp_menus_step_2() {
 	remove_submenu_page('options-general.php', 'bp-components'); // Tab in BuddyPress
 	remove_submenu_page('bp-general-settings', 'ass_admin_options'); // Group Email
 	remove_submenu_page('options-general.php', 'bp-like-settings'); // BuddyPress Like
+	remove_submenu_page('options-general.php', 'slideshare'); 
 
 }
 
